Error handling and messages for missing modules